[package]
name = "fernlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env_logger = "0.10.0"
log = "0.4.0"
fern = "0.6.0"
# fern = {version ="^0.6.2",features = ["no-color"]}
chrono={version = "0.4",features = ["serde","unstable-locales"]}
colored = { version = "2.0.4", features = ["no-color"] }
